objects/LAT_MX_Catalogacion__c.object
<CustomObject>
    <fields>
        <fullName>LAT_MX_Categoria__c</fullName>
        <label>Categoria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Marca__c</fullName>
        <label>Marca</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Visita__c</fullName>
        <label>Visita</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>LAT MX Catalogaciones</relationshipLabel>
        <relationshipName>LAT_MX_Catalogaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>LAT MX Catalogacion</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT MX Catalogaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>